- 2.4.16
    - Add metal golem equipments
    - Fix rendering of decorative layers on golems with size upgrade

- 2.4.15
    - Fix non-owner being able to change humanoid equipment
    - Add Create deployer automation

- 2.4.14
    - Golems will attack enemies touching it first
    - Fix shield block sound
    - Now humanoid can open doors
    - Fix grindstone remove upgrade

- 2.4.13
    - Fix advancement logspam
    - Add config for distances starting to go back (default 10 for following, 20 for wandering)
    - Add config for distances golem would be forced to teleport back (default 30)
    - Humanoid can now ride horse
    - Now humanoid golem riding dog golem will control dog golem
    - Add dog golem ridden speed factor to config
    - Golems ridden or riding other living entities as controller can also teleport to player
    - Golems summoned in creative will also consume stack

- 2.4.12
    - Fix golem not following player under water with swim upgrade
    - Increase golem speed under water
    - Fix golem always  trying to float up even when player is deep under water
    - Now pickup upgrade will not destroy item when owner is present
    - Humanoid and dog golem are no longer knock back resistant
    - Add knockback resistance to materials
    - Fix custom Goals not added to golems when reloading world
    - Increase command wand target range
    - Improve command wand message when ordering entities to attack others

- 2.4.11
    - Fix golem not teleport to player when having an attack target
    - Fix dog chasing target even when in sit position, when commanded by wand
    - Fix dog riding one another
    - Fix golems being able to be picked up by other players under some circumstances
    - Allow command wand to target far away entities

- 2.4.10
    - Add BlazeGear compat
    - Fix golem weapon switching
    - Fix golem teleport when having swim upgrade

- 2.4.9
    - add mount upgrade and size upgrade
    - add dispenser behavior for golems