@@ -10,7 +10,7 @@
 	},{
 	  "type": "patchouli:spotlight",
 	  "item": "modulargolems:pickup_no_destroy",
-	  "text": "傀儡拾取物品时首先会试图放入绑定的容器。容器在傀儡被召唤出来时绑定。如果容器不存在或者已满（不会寻找下一个容器），则会试图把物品传送给玩家。如果玩家不存在，则会销毁物品（为了防止卡顿）使用取消销毁升级，则会把剩余物品留在原地不拾取。"
+	  "text": "傀儡拾取物品时会试图把物品传送给玩家。如果傀儡处于停留模式，首先会试图放入1格内的容器。如果容器不存在或者已满且玩家不存在，则会销毁物品（为了防止卡顿）使用取消销毁升级，则会把剩余物品留在原地不拾取。"
 	},{
 	  "type": "patchouli:spotlight",
 	  "item": "modulargolems:pickup_mending",
